--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/urbanishimwe/digitfy.git"
+    "url": "git+https://github.com/urbanishimwe/digitfy.git"
   },
   "author": "Urban ISHIMWE",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/urbanishimwe/digitfy/issues"
+  },
+  "homepage": "https://github.com/urbanishimwe/digitfy#readme"
 }
