--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "git+https://github.com/urbanishimwe/digitfy.git"
   },
-  "author": "Urban ISHIMWE",
+  "author": "Urban ISHIMWE ishimweurban@gmail.com",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/urbanishimwe/digitfy/issues"
