--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "git+https://github.com/urbanishimwe/digitfy.git"
   },
   "author": "Urban ISHIMWE ishimweurban@gmail.com",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/urbanishimwe/digitfy/issues"
   },
