--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "digitfy",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "A powerful module to deal with numbers inside string.",
   "main": "./src/index.js",
   "scripts": {
@@ -21,16 +21,10 @@
   },
   "homepage": "https://github.com/urbanishimwe/digitfy#readme",
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.2"
+    "eslint": "^5.16.0"
   },
   "dependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
     "chai": "^4.2.0",
     "coveralls": "^3.0.3",
     "mocha": "^6.1.4",
